manifest/objects/ALTF__Competitor__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Logo_URL__c</fullName>
        <description>URL to an image of appropriate dimensions to render on Map</description>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Ticker__c</fullName>
        <description>Short name used for display on Maps</description>
        <label>Ticker</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Altify Competitor</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>